--- a/index.html
+++ b/index.html
@@ -35,15 +35,17 @@
     </div>
 
 <div style="padding: 5px 15px;
- background: #888bc4;display:inline-block;
+ background: #888bc4;display:inline-block;margin-right: 0px;
      margin-top: 3px;">
 <p> <h1>Welcome to css course</h1>
-Lorem.
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad quam quos voluptatum saepe voluptates ipsam sequi doloremque error mollitia veritatis iure, quia eligendi, sed nihil soluta hic officia. Asperiores, laudantium!
 
 </p>
 
 <div class="content">
-Lorem ipsum dolor sit
+<p>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam ratione eaque facere est veniam temporibus, reprehenderit expedita, corporis, ullam recusandae voluptate numquam repellat. Ipsam ipsum iure eveniet laborum saepe odio?
+</p>
 </div>
 <br>
 
@@ -51,7 +53,16 @@ Lorem ipsum dolor sit
 
     <div class="container">
         <p>Thanks for being with us</p>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint voluptates quam, pariatur explicabo vel, ratione dolore officia harum repellat, impedit eius maiores error? Ratione asperiores amet quo atque, odio maiores?
+        </p>
     </div>
+   
+    <footer class="foot">
+       <div >
+        &copy;2023 TostGroup Training
+       </div> 
+    </footer>
 
 
 </body>
